[package]
name = "peerset-fuzzer"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
honggfuzz = "0.5"
substrate-peerset = { path = ".." }
futures-preview = "0.3.0-alpha.19"
libp2p = { version = "0.12.0", default-features = false }
linked-hash-map = "0.5.2"
log = "0.4.8"
lru-cache = "0.1.2"
serde_json = "1.0.41"
rand = "0.7.2"

[workspace]

[[bin]]
name = "main"
path = "src/main.rs"